@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.7 2002/09/04 00:49:48 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.8 2002/09/04 00:52:59 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1255,7 +1255,11 @@ sys/netinet6/esp_output.c			1.14
   use correct padding boundary, to correctly estimate ESP header size.
   problem found by Arto Selonen <arto@selonen.org>
 
-usr.sbin/mtrace/mtrace.c			1.21-1.23(via patch)
+usr.sbin/mtrace/mtrace.c			1.21-1.23 (via patch)
   revoke root priv earlier.  check fd_set overrun (and die if overrun).
   avoid using runtime-generated printf format string.  from xs@kittenz.org
   indentation fix.
+
+usr.sbin/mrinfo/mrinfo.c			1.15 (via patch)
+  fix an exploitable fd_set overflow in mrinfo(8).  drop root priv earlier.
+  do not use generated printf format string.  from xs@kittenz.org
